--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "seed": "node seeder.js",
-    "build": "echo 'No build step required for Node.js'"
+    "build": "echo 'No build step required for Node.js'",
+    "postinstall": "npm install --omit=dev"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -28,4 +29,4 @@
   "devDependencies": {
     "nodemon": "^3.0.2"
   }
-} 
+}
